# golib

./: AUTHORS  CMakeLists.txt  CMakeLists.txt.multiple-libs  CMakeLists.txt.skel  COPYING  COPYING.COMMERCIAL  ChangeLog  Doxyfile  IDEEN  INSTALL  Makefile  Makefile.in  NEWS  README  README.md  RELEASE  TODO  aclocal.m4  bootstrap  config.status  configure  configure.in  doxygen-vol.config  doxygen.config  golib.pc.cmakeconfig  libtool  ltmain.sh  maindocpage.h  mkfunctors.py  namespacedoc.h  package.sh  rpm-build.spec
examples/cairoplot/: CMakeLists.txt  cairoplot.cpp
examples/icvtool/: CMakeLists.txt  gaussimagecontrol.cpp  gaussimagecontrol.h  icvtool.cpp
examples/pcatool/: CMakeLists.txt  pcatool.cpp
gl/: CMakeLists.txt
gl/python/: CMakeLists.txt  gogl.i
gl/src/: animation.cpp  camera.cpp  drawableobject.cpp  helper.cpp  light.cpp  material.cpp  meshobject.cpp  object.cpp  offfile.cpp  scene.cpp  texture.cpp  textureimage.cpp  waypoint.cpp
gui/: CMakeLists.txt
gui/src/: .mainwindow.cpp.swp  about.cpp  cairoplot.cpp  cannycontrol.cpp  control.cpp  controldialog.cpp  controlsbox.cpp  countfilenames.cpp  draw.cpp  glanimation.cpp  gldrawableobjectinput.cpp  gllightinput.cpp  glmaterialinput.cpp  globjectinput.cpp  glwidget.cpp  helper.cpp  imagecontrol.cpp  imageview.cpp  interactivedraw.cpp  interactivedrawobject.cpp  logo.xcf  logo.xpm  main.cpp  mainwindow.cpp  multivectorinput.cpp  offview.cpp  offviewcontrol.cpp  plotview.cpp  progressbar.cpp  scenecontrol.cpp  sceneview.cpp  textoutput.cpp  vectorinput.cpp  videocapturecontrol.cpp  warning.cpp  workerthread.cpp
matlab/: CMakeLists.txt  README  gomatlab.cpp
matlab/mex/: CMakeLists.txt  README
matlab/python/: CMakeLists.txt  gomatlab.i
plot/: CMakeLists.txt
plot/examples/: Makefile  main  main.cpp  test.eps
plot/src/: cairoplot.cpp
python/: CMakeLists.txt  golib.i  golibpython.cpp
pythonembed/: CMakeLists.txt
pythonembed/src/: gopython.cpp
src/: Makefile.am  dummy.cc  makefile.pro
src/data/: Makefile.am  goarray.cc  goarrayi.cc  gobtreei.cpp  gocache.cc  gofixedarrayi.cpp  gohashcache.cc  gohashtable.cc  gohashtablei.cpp  goheap.cc  goheapi.cc  golist.cc  golisti.cc  goqueue.cc  goqueuei.cc  gostring.cc  gotree.cc  gotreei.cc
src/financial/: godepot.cc  gopaper.cc
src/gm/: gosumproduct.cpp
src/graphics/: Makefile.am  TODO  goblockrenderer.cc  goimagebuffer.cc  gopowfunction.cc  gosblockrenderer.cc  gosblockrenderer.cc.new  gotiffimage.cc  govglblockrenderer.cc.org  goviewplane.cc  goviewvolume.cc  govolumerenderer.cc  govolumerendererexp.cc
src/levelsets/: goregionls.cpp
src/math/: Makefile.am  affinematch.cpp  barycentric.cpp  binaryimage.cpp  canny.cpp  cg.cpp  contours.cpp  covariance.cpp  divergence.cpp  divnormalizedgrad2d.cpp  getknee.cpp  getroots.cpp  go3vector.cc  go3vectori.cc  go44matrix.cc  go4vector.cc  go4vectori.cc  goaffinetransform.cpp  gobiorthowavelet.cpp  gocomplex.cc  gocubicspline.cpp  gocubicsplinend.cpp  gocurve.cpp  godenoise.cpp  goeigenvalue.cpp  goeqsystem.cc  gogausspdf.cpp  gointegral.cc  gokmeans.cpp  gokmeansspatial.cpp  golinearalgebra.cc  gomanifold.cpp  gomath.cpp  gomatrix.cc  gomatrix.cpp  gomatrixi.cc  gomatrixsignali.cpp  gonubs.cpp  gonvector.cc  gopdf.cpp  (+20 more)
src/misc/: Makefile.am  goargs.cpp  goconfigfile.cc  goconfigfileaccess.cc  godate.cc  goerror.cc  goexception.cc  gofileio.cc  goglobal.cpp  gognuplot.cpp  golog.cpp  gomultiplotter.cpp  goobjectbase.cc  goobjectinfo.cc  goobjectmessage.cc  goofffile.cpp  goplot.cpp  gosingleplot.cpp  gostatusobject.cc  gotransferfunction.cc  govideocapture.cpp  plot.cpp
src/mmx/: gommxcheck.s  gommxmath.s
src/network/: Makefile.am  goconnection.cc  gonetobject.cc  gonetwork.cc  goserver.cc
src/nifty/: Makefile.am  gorandom.cc
src/plot/: cairoplot.cpp  gnuplot.cpp  gnuplot_helperfunctions.cpp  goplotter.cpp  gosingleplot.cpp  graph.cpp  graphaxis.cpp  object2dbox.cpp  object2dimage.cpp  object2dpoints.cpp  object2dtext.cpp  plot.cpp  texttraits.cpp
src/python/: gopython.cpp
src/seispack/: .depend  MD5  README  bakvec.c  balanc.c  balbak.c  bandr.c  bandv.c  bisect.c  bqr.c  cbabk2.c  cbal.c  cdiv.c  cg.c  ch.c  cinvit.c  combak.c  comhes.c  comlr.c  comlr2.c  comqr.c  comqr2.c  cortb.c  corth.c  csroot.c  elmbak.c  elmhes.c  eltran.c  epslon.c  figi.c  figi2.c  files  hqr.c  hqr2.c  htrib3.c  htribk.c  htrid3.c  htridi.c  imtql1.c  imtql2.c  (+45 more)
src/shape/: .gocurve.cpp.swp  .gopointcloud.cpp.swo  .gopointcloud.cpp.swp  .goshape.cpp.swp  README  gocurvaturediffusion.cpp  gocurve.cpp  gocurvepartition.cpp  godiscretecurvepartition.cpp  gonubs.cpp  gonurbs.cpp  gopointcloud.cpp  goshape.cpp  partial.cpp
src/siemens/: GPATH  GRTAGS  GSYMS  GTAGS  README  bitio_m.h  bitio_m_stdio.h  config.h  felics.cxx  felics.h  go3dalgo.h  go3dblock.cxx  go3dblock.h  go3dcoder.cxx  go3dcoder.h  go3dcoderdiff.h  go3dcoderfelics.cxx  go3dcoderfelics.h  go3dcodergolomb.cxx  go3dcodergolomb.h  go3dcoderhuffman.h  go3dcodersubband.cxx  go3dcodersubband.h  go3dcompressed.cxx  go3dcompressed.h  go3ddwt.cxx  go3ddwt.h  go3dinfo.h  go3dmacros.h  go3dmultistagest.cxx  go3dmultistagest.h  go3dsubblock.cxx  go3dsubblock.h  go3dviewplane.h  go3vector.cxx  go3vector.h  go44matrix.cxx  go44matrix.h  go4vector.h  goarray.cxx  (+32 more)
src/signal/: CHANGES  IDEEN  Makefile.am  binaryimage.cpp  canny.cpp  centerofmass.cpp  convert.cpp  crop.cpp  defaultsize.cpp  goadaptivequantizer.cpp  goblockprovider.cc  goblockstore.cc  gocluster3d.cc  godwt.cc  godwt3d.cpp  goedgedetect.cc.filtermedian-missing  gofilter.cc  gofilter1d.cpp  gofilter3d.cpp  gofilterbank.cc  gofilterbankreverse.cc  gofilterbankstage.cc  gofilterbankstagereverse.cc  gofilterfir.cc  gofiltergauss.cc  gogaussimage.cpp  gohaar3d.cpp  gohistogram.cpp  gojoystick.cc  gonavdevice.cc  gonavkeyboard.cc  gopresencemanager.cc  goquantizer.cpp  goresample.cc  goresolutionmanager.cc  gosignal.cc  gosignal2d.cc  gosignal3d.cc  gosignal3dbase.cpp  gosignal3dgenericiterator.cpp  (+18 more)
src/system/: Makefile.am  (+3 more)
swig/: CMakeLists.txt  golib.i  golibguile.cpp  install-scm.sh  test.scm
(+3635 files in other folders)
